--- a/web/index.html
+++ b/web/index.html
@@ -4,14 +4,16 @@
     <title>nsmp_barcode_app</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script defer src="main.dart" type="application/dart"></script>
-    <script defer src="packages/browser/dart.js"></script>
-    <script async src="packages/dart_barcode/vendors/js/JsBarcode.all.min.js"></script>
+    <script src="JsBarcode.all.min.js"></script>
+    <script defer src="main.dart.js"></script>
     <script src="iframeResizer.contentWindow.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
-<nsmp-app><img src="ajax-loading-scheme5.gif" alt="Загрузка..."></nsmp-app>
+<div id="barcodeContainer"><img id="loading" style="height: inherit" src="ajax-loading-scheme5.gif" alt="Загрузка...">
+    <div><button id="print" style="display: none">Печать</button></div>
+    <div><svg id="barcode" style="display: none"></svg></div>
+</div>
 </body>
 </html>
