--- a/web/index.html
+++ b/web/index.html
@@ -4,16 +4,20 @@
     <title>nsmp_barcode_app</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="JsBarcode.all.min.js"></script>
-    <script defer src="main.dart.js"></script>
-    <script src="iframeResizer.contentWindow.min.js"></script>
+    <script type="application/javascript" src="JsBarcode.all.min.js"></script>
+    <script type="application/javascript" defer src="main.dart.js"></script>
+    <script type="application/javascript" src="iframeResizer.contentWindow.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 <div id="barcodeContainer"><img id="loading" style="height: inherit" src="ajax-loading-scheme5.gif" alt="Загрузка...">
-    <div><button id="print" style="display: none">Печать</button></div>
-    <div><svg id="barcode" style="display: none"></svg></div>
+    <div>
+        <button id="print" style="display: none">Печать</button>
+    </div>
+    <div>
+        <svg id="barcode" style="display: none"></svg>
+    </div>
 </div>
 </body>
 </html>
